--- a/index.HTML
+++ b/index.HTML
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>这是我的第一个网页</title>
+		<title>This is my first webpage</title>
 	</head>
 	<body>
-		<h1>星</h1>
-			<h3>星</h3>
-				<h6>星</h6>
+		<h1>star</h1>
+			<h3>star</h3>
+				<h6>star</h6>
 				<p>001001010</p>
 				<q>百因必有果</q>
 				<address>xianlingtong</address>
