--- a/index.HTML
+++ b/index.HTML
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" href="style.css>
 		<title>这是我的第一个网页</title>
 	</head>
 	<body>
